third_party/move/move-compiler-v2/tests/ability-check/typing/eq_invalid2.exp

Diagnostics:
error: local `r` of type `M::R` does not have the `copy` ability
   ┌─ tests/ability-check/typing/eq_invalid2.move:11:9
   │
11 │         r == r;
   │         ^^^^^^ copy needed here because value is still in use

error: local `r` of type `M::R` does not have the `drop` ability
   ┌─ tests/ability-check/typing/eq_invalid2.move:11:9
   │
11 │         r == r;
   │         ^^^^^^ operator drops value here (consider borrowing the argument)

error: value of type `M::G1<T>` does not have the `drop` ability
   ┌─ tests/ability-check/typing/eq_invalid2.move:15:9
   │
15 │         G1{ f: t } == G1{ f: t };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^ operator drops value here (consider borrowing the argument)
